Finish CMake Work

--- a/src/Looget/CMakeLists.txt
+++ b/src/Looget/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.11)
 
-project(ldeget)
+project(Looget)
 
 # Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -10,9 +10,10 @@ set(CMAKE_AUTOUIC ON)
 
 # Find the QtWidgets library
 find_package(Qt5Widgets)
+find_package(Qt5Network)
 
 # Tell CMake to create the executable
-add_executable(ldeget main.cpp widget.cpp)
+add_executable(looget main.cpp widget.cpp)
 
 # Use the Widgets module from Qt 5.
-target_link_libraries(ldeget Qt5::Widgets)
+target_link_libraries(looget Qt5::Widgets Qt5::Network)
