--- a/src/Lootepad/CMakeLists.txt
+++ b/src/Lootepad/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.11)
 
-project(lootepad)
+project(Lootepad)
 
 # Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
