--- a/src/ldeabout/CMakeLists.txt
+++ b/src/ldeabout/CMakeLists.txt
@@ -10,9 +10,10 @@ set(CMAKE_AUTOUIC ON)
 
 # Find the QtWidgets library
 find_package(Qt5Widgets)
+qt5_wrap_ui(UIS_HDRS widget.ui)
 
-# Tell CMake to create the helloworld executable
-add_executable(ldeabout main.cpp widget.cpp)
+# Tell CMake to create the executable
+add_executable(ldeabout main.cpp widget.cpp laboutwidget.cpp ${UIS_HDRS})
 
 # Use the Widgets module from Qt 5.
 target_link_libraries(ldeabout Qt5::Widgets)
