--- a/src/ldecc/CMakeLists.txt
+++ b/src/ldecc/CMakeLists.txt
@@ -10,9 +10,10 @@ set(CMAKE_AUTOUIC ON)
 
 # Find the QtWidgets library
 find_package(Qt5Widgets)
+qt5_wrap_ui(UIS_HDRS descc.ui gencc.ui lancc.ui ldecc.ui safcc.ui)
 
 # Tell CMake to create the helloworld executable
-add_executable(ldecc descc.cpp gencc.cpp lancc.cpp ldecc.cpp ldeccrc.qrc main.cpp safcc.cpp)
+add_executable(ldecc descc.cpp gencc.cpp lancc.cpp ldecc.cpp ldeccrc.qrc main.cpp safcc.cpp ${UIS_HDRS})
 
 # Use the Widgets module from Qt 5.
 target_link_libraries(ldecc Qt5::Widgets)
