Fix Compile Problem of Lootepad

--- a/src/lrun/CMakeLists.txt
+++ b/src/lrun/CMakeLists.txt
@@ -10,9 +10,10 @@ set(CMAKE_AUTOUIC ON)
 
 # Find the QtWidgets library
 find_package(Qt5Widgets)
+qt5_wrap_ui(UIS_HDRS widget.ui)
 
 # Tell CMake to create the executable
-add_executable(lrun main.cpp widget.cpp)
+add_executable(lrun main.cpp widget.cpp ${UIS_HDRS})
 
 # Use the Widgets module from Qt 5.
 target_link_libraries(lrun Qt5::Widgets)
