Change Main CMakeList.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,3 +25,9 @@ ADD_SUBDIRECTORY(loofm)
 ADD_SUBDIRECTORY(Looget)
 ADD_SUBDIRECTORY(looplorer)
 ADD_SUBDIRECTORY(Lootepad)
+
+INSTALL(DIRECTORY ../share/ DESTINATION /usr/share/applications)
+INSTALL(PROGRAMS ../shell/startlde DESTINATION /usr/bin)
+INSTALL(FILES ../xsessions/LDE.desktop DESTINATION /usr/share/xsessions)
+INSTALL(FILES ../wallpapers/lde-default.png DESTINATION /usr/share/wallpapers)
+INSTALL(FILES ../xsessions/LDE.desktop DESTINATION /usr/share/apps/kdm/sessions)
