--- a/src/ldecc/CMakeLists.txt
+++ b/src/ldecc/CMakeLists.txt
@@ -11,9 +11,10 @@ set(CMAKE_AUTOUIC ON)
 # Find the QtWidgets library
 find_package(Qt5Widgets)
 qt5_wrap_ui(UIS_HDRS descc.ui gencc.ui lancc.ui ldecc.ui safcc.ui)
+qt5_add_resources(QRCS_CPPS ldeccrc.qrc)
 
 # Tell CMake to create the helloworld executable
-add_executable(ldecc descc.cpp gencc.cpp lancc.cpp ldecc.cpp ldeccrc.qrc main.cpp safcc.cpp ${UIS_HDRS})
+add_executable(ldecc descc.cpp gencc.cpp lancc.cpp ldecc.cpp main.cpp safcc.cpp ${UIS_HDRS} ${QRCS_CPPS})
 
 # Use the Widgets module from Qt 5.
 target_link_libraries(ldecc Qt5::Widgets)
