--- a/src/loofm/CMakeLists.txt
+++ b/src/loofm/CMakeLists.txt
@@ -10,14 +10,15 @@ set(CMAKE_AUTOUIC ON)
 
 find_package(Qt5Widgets)
 qt5_wrap_ui(UIS_HDRS fileview.ui)
+qt5_add_resources(QRCS_CPPS resource.qrc)
 # find_package(Qt5LinguistTools)
 
 # qt5_add_translation(filemanager_zh.qm filemanager_zh.ts)
 
 # Tell CMake to create the helloworld executable
-add_executable(ldefm fileview.cpp main.cpp ${UIS_HDRS})
+add_executable(loofm fileview.cpp main.cpp ${UIS_HDRS} ${QRCS_CPPS})
 
 # Use the Widgets module from Qt 5.
-target_link_libraries(ldefm Qt5::Widgets)
+target_link_libraries(loofm Qt5::Widgets)
 
-INSTALL (TARGETS ldefm RUNTIME DESTINATION /usr/bin)
+INSTALL (TARGETS loofm RUNTIME DESTINATION /usr/bin)
